[package]
name = "nebula-credential-testutil"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false                     # internal test utility only

[lints]
workspace = true

[dependencies]
nebula-credential = { path = "../credential" }
tokio = { workspace = true, features = ["sync"] }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
serde = { workspace = true, features = ["derive"] }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
