[package]
name = "nebula-credential"
version.workspace = true
edition.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Tokio features (audited 2026-04-20, phase P3.1; resolver/executor live in nebula-engine):
#   `time`   — `timeout` in rotation/error (validation);
#              device-code polling paths
#   `macros` — #[tokio::test] (133 sites)
#   `rt`     — required by #[tokio::test] expansion and tokio::spawn in tests
# Note: `sync` is intentionally absent — the contract crate ships no
# in-memory store; the canonical impls live in `nebula_storage::credential`.
tokio = { workspace = true, features = ["time", "macros", "rt"] }
tokio-util = { workspace = true }

# Crypto and security — AES-256-GCM + Argon2id live in nebula-crypto (ADR-0088).
nebula-crypto = { path = "../crypto" }
base64 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
secrecy = { workspace = true }
subtle = { workspace = true }

# Core types
nebula-credential-macros = { path = "macros" }
nebula-core = { path = "../core" }
nebula-metadata = { path = "../metadata" }

# Schema definitions
nebula-schema = { path = "../schema" }

# Resilience (circuit breaker, retry)
nebula-resilience = { path = "../resilience" }

# Errors
nebula-error = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
# RFC 3986 §3.2.1 userinfo encoding for ConnectionUri::as_url (§15.5 §3295)
percent-encoding = "2"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true }
humantime-serde = "1.1"
semver = { workspace = true }

# Synchronization
arc-swap = { workspace = true }

# Registry primitives (Tech Spec §3.1 — KEY-keyed CredentialRegistry)
# `ahash` 0.8 — ~3× faster than default SipHash at credential-key sizes
# (10–50 bytes); meets the §3.1 baseline bench (~5.5 ns mean lookup).
# `bitflags` 2 — `Capabilities` bitflag set populated at registration
# time (Tech Spec §15.8, Stage 7 fills detection; Stage 5 stubs empty).
ahash = "0.8"
bitflags = "2"

# Error ABI: per-variant context structs + hard size cap (closes #588)
static_assertions = { workspace = true }
compact_str = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
insta = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
trybuild = "1.0"

[features]
default = []
rotation = []
# Exposes test-only helpers (`store::test_helpers::make_credential`,
# `SchemeGuard::for_test`, `SchemeFactory::for_test`, `SchemeFactory::for_test_static`)
# to sibling crates' integration tests. In-memory `CredentialStore` impls are
# NOT here: the canonical ones live in `nebula_storage::credential`, and a
# Business-tier consumer that cannot dep storage keeps a colocated `#[cfg(test)]`
# double. The test-only constructors stay gated here so they cannot leak into a
# release binary (ADR-0023).
test-util = []

[lints]
workspace = true
