[package]
name = "nebula-credential"
version.workspace = true
edition.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Tokio features:
#   `time`   — `timeout` in rotation/error; device-code polling paths
#   `macros` — #[tokio::test]
#   `rt`     — #[tokio::test] expansion; `tokio::spawn` for the lease lifecycle task
#   `sync`   — `mpsc`/`oneshot` channels driving the lease-lifecycle scheduler
#              (relocated from nebula-engine into `runtime::lease`, ADR-0092)
tokio = { workspace = true, features = ["time", "macros", "rt", "sync"] }
tokio-util = { workspace = true }

# Crypto and security — AES-256-GCM + Argon2id live in nebula-crypto (ADR-0088).
nebula-crypto = { path = "../crypto" }
base64 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
secrecy = { workspace = true }
subtle = { workspace = true }

# Core types
nebula-credential-macros = { path = "macros" }
nebula-core = { path = "../core" }
nebula-metadata = { path = "../metadata" }

# Schema definitions
nebula-schema = { path = "../schema" }

# Storage port — RefreshClaimStore trait (ADR-0092 step 4A.3)
nebula-storage-port = { path = "../storage-port" }

# Metrics — pre-bound handles for refresh coordinator series
nebula-metrics = { path = "../metrics" }

# Resilience (circuit breaker, retry)
nebula-resilience = { path = "../resilience" }

# Event bus — lease/refresh lifecycle events (ADR-0092, runtime relocated in)
nebula-eventbus = { path = "../eventbus" }

# Errors
nebula-error = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
# RFC 3986 §3.2.1 userinfo encoding for ConnectionUri::as_url (§15.5 §3295)
percent-encoding = "2"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true }
humantime-serde = "1.1"
semver = { workspace = true }

# Synchronization
arc-swap = { workspace = true }
parking_lot = { workspace = true }

# LRU cache for per-credential circuit breakers in L1RefreshCoalescer
lru = { workspace = true }

# SEC-02 redaction pattern for OAuth2 token-endpoint error summaries (token_refresh)
regex = { workspace = true }

# scopeguard — RAII cleanup for L2 claim + heartbeat teardown
scopeguard = "1"

# futures — select!/stream combinators in refresh coordinator
futures = { workspace = true }

# Registry primitives (Tech Spec §3.1 — KEY-keyed CredentialRegistry)
# `ahash` 0.8 — ~3× faster than default SipHash at credential-key sizes
# (10–50 bytes); meets the §3.1 baseline bench (~5.5 ns mean lookup).
# `bitflags` 2 — `Capabilities` bitflag set populated at registration
# time (Tech Spec §15.8, Stage 7 fills detection; Stage 5 stubs empty).
ahash = "0.8"
bitflags = "2"

# Error ABI: per-variant context structs + hard size cap (closes #588)
static_assertions = { workspace = true }
compact_str = { workspace = true }

[dev-dependencies]
# Test-only: impl the `#[async_trait]`-defined `RefreshClaimStore` port as a
# no-op double for resolver refresh-path regressions. Production credential code
# deliberately uses none (RPITIT / boxed `ProviderFuture` instead).
async-trait = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true, features = [
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "test-util",
] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
insta = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
trybuild = "1.0"

[features]
default = []
rotation = []

[lints]
workspace = true
