[package]
name = "nebula-credential"
version.workspace = true
edition.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Tokio features:
#   `time`   ŌĆö `timeout` on refresh/resolve paths; device-code polling paths
#   `macros` ŌĆö #[tokio::test]
#   `rt`     ŌĆö #[tokio::test] expansion; `tokio::spawn` for the lease lifecycle task
#   `sync`   ŌĆö `mpsc`/`oneshot` channels driving the lease-lifecycle scheduler
#              (relocated from nebula-engine into `runtime::lease`, ADR-0092)
tokio = { workspace = true, features = ["time", "macros", "rt", "sync"] }
tokio-util = { workspace = true }

# Crypto and security ŌĆö AES-256-GCM + Argon2id live in nebula-crypto (ADR-0088).
nebula-crypto = { path = "../crypto" }
base64 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
secrecy = { workspace = true }
subtle = { workspace = true }

# Core types
nebula-credential-macros = { path = "macros" }
nebula-core = { path = "../core" }
nebula-metadata = { path = "../metadata" }

# Schema definitions
nebula-schema = { path = "../schema" }

# Storage port ŌĆö RefreshClaimStore trait (ADR-0092 step 4A.3)
nebula-storage-port = { path = "../storage-port" }

# Metrics ŌĆö pre-bound handles for refresh coordinator series
nebula-metrics = { path = "../metrics" }

# Resilience (circuit breaker, retry)
nebula-resilience = { path = "../resilience" }

# Event bus ŌĆö lease/refresh lifecycle events (ADR-0092, runtime relocated in)
nebula-eventbus = { path = "../eventbus" }

# Errors
nebula-error = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
# RFC 3986 ┬¦3.2.1 userinfo encoding for ConnectionUri::as_url (┬¦15.5 ┬¦3295)
percent-encoding = "2"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Utilities
chrono = { workspace = true }
tracing = { workspace = true }
semver = { workspace = true }
async-trait = { workspace = true }

# Synchronization
arc-swap = { workspace = true }
parking_lot = { workspace = true }

# LRU cache for per-credential circuit breakers in L1RefreshCoalescer
lru = { workspace = true }

# futures ŌĆö select!/stream combinators in refresh coordinator

# Registry primitives (Tech Spec ┬¦3.1 ŌĆö KEY-keyed CredentialRegistry)
# `ahash` 0.8 ŌĆö ~3├Ś faster than default SipHash at credential-key sizes
# (10ŌĆō50 bytes); meets the ┬¦3.1 baseline bench (~5.5 ns mean lookup).
# `bitflags` 2 ŌĆö `Capabilities` bitflag set populated at registration
# time (Tech Spec ┬¦15.8, Stage 7 fills detection; Stage 5 stubs empty).
ahash = "0.8"
bitflags = "2"

# `dashmap` ŌĆö lock-free concurrent `HashMap` for the resolver's live-handle
# cache (`HandleCache`). The cache is read-heavy (every resolve/refresh path
# reads it) and write-light (only on first resolve or handle replacement), so
# the per-shard sharding eliminates the write-lock contention that
# `Mutex<HashMap>` imposed on concurrent resolution. Already a workspace dep
# (present in the workspace Cargo.lock ŌĆö no new supply-chain surface).
dashmap = { workspace = true }

# Error ABI: per-variant context structs + hard size cap (closes #588)
static_assertions = { workspace = true }
compact_str = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
tokio = { workspace = true, features = [
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "test-util",
] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
insta = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
trybuild = "1.0"

[features]
default = []
# Compatibility feature retained while `nebula-engine/rotation` also enables
# `nebula-resource/rotation`. OAuth2 refresh itself is now type-directed through
# `Refreshable::refresh`; this flag no longer changes credential behavior and
# can be removed only with the engine's cross-crate feature migration.
rotation = []

[package.metadata.docs.rs]
# Render feature-gated items on docs.rs (build with every feature).
all-features = true

[lints]
workspace = true
