[package]
name = "nebula-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# AES-256-GCM authenticated encryption + Argon2id KDF — the only reason this
# crate exists. Pinned to the same versions nebula-credential carried before the
# ADR-0088 extract.
aes-gcm = { workspace = true }
argon2 = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# CryptoError derives the cross-cutting Classify taxonomy (needs the derive feature).
nebula-error = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[lints]
workspace = true
