[package]
name = "nebula-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Workflow execution engine for Nebula"
license.workspace = true
repository.workspace = true

[features]
default = []
# Convenience alias that forwards `nebula-action`'s `unstable-retry-scheduler`
# feature. Enabling this feature does **not** install a retry scheduler
# (canon §11.2, #290); it only un-hides `ActionResult::Retry` in
# `nebula-action`. The engine's retry-detection path uses the always-
# available `ActionResult::is_retry()` predicate so it is correct under
# Cargo feature unification regardless of whether this mirror feature is
# enabled — the alias exists purely so downstream crates can turn on the
# variant via a single feature on the engine dependency.
unstable-retry-scheduler = ["nebula-action/unstable-retry-scheduler"]
rotation = ["nebula-credential/rotation", "nebula-storage/rotation"]

[dependencies]
nebula-core = { path = "../core" }
nebula-error = { workspace = true, features = ["derive"] }
nebula-action = { path = "../action" }
nebula-expression = { path = "../expression" }
nebula-plugin = { path = "../plugin" }
nebula-workflow = { path = "../workflow" }
nebula-execution = { path = "../execution" }
nebula-schema = { path = "../schema" }
nebula-credential = { path = "../credential" }
nebula-eventbus = { path = "../eventbus" }
nebula-resource = { path = "../resource" }
nebula-sandbox = { path = "../sandbox" }
nebula-resilience = { path = "../resilience" }
nebula-storage = { path = "../storage", features = ["credential-in-memory"] }
nebula-metrics = { path = "../metrics" }
nebula-telemetry = { path = "../telemetry" }

async-channel = { workspace = true }
async-trait = { workspace = true }
semver = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
chrono = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
humantime-serde = "1.1"
lru = { workspace = true }
parking_lot = { workspace = true }
scopeguard = "1"
reqwest = { workspace = true, default-features = false, features = [
  "json",
  "rustls",
  "form",
  "stream",
] }
futures = { workspace = true }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }

[dev-dependencies]
nebula-metrics = { path = "../metrics" }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# `token_refresh` tests use a loopback `TcpListener` to mock the token endpoint;
# `execute_stateful_aborts_handler_on_cancel` needs `test-util` for `start_paused`.
tokio = { workspace = true, features = ["io-util", "net", "rt", "macros", "time", "test-util"] }
tokio-util = { workspace = true }
criterion = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
wiremock = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true
