[package]
name = "nebula-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Workflow execution engine for Nebula"
license.workspace = true
repository.workspace = true

[features]
default = []
rotation = ["nebula-credential/rotation", "nebula-storage/rotation"]
# Run the full 10-min refresh-coordinator chaos test (sub-spec §5.4) in
# `crates/engine/tests/refresh_coordinator_chaos.rs`. Default CI runs the
# scaled-down 30s version; this feature is enabled in the nightly chaos
# CI job to widen the test plane to 100 credentials × 10 minutes.
chaos-full = []
# Exposes `RefreshCoordMetrics::for_tests()` and other test-only helpers
# that need to construct private MetricsRegistry instances without
# routing through the engine-shared registry. Must NOT be enabled in a
# production release build — see ADR-0023.
test-util = []

[dependencies]
nebula-core = { path = "../core" }
nebula-error = { workspace = true, features = ["derive"] }
nebula-action = { path = "../action" }
nebula-expression = { path = "../expression" }
nebula-plugin = { path = "../plugin" }
nebula-workflow = { path = "../workflow" }
nebula-execution = { path = "../execution" }
nebula-schema = { path = "../schema" }
nebula-credential = { path = "../credential" }
nebula-eventbus = { path = "../eventbus" }
nebula-resource = { path = "../resource" }
nebula-sandbox = { path = "../sandbox" }
nebula-resilience = { path = "../resilience" }
nebula-storage = { path = "../storage", features = ["credential-in-memory"] }
nebula-metrics = { path = "../metrics" }
nebula-telemetry = { path = "../telemetry" }

async-channel = { workspace = true }
async-trait = { workspace = true }
semver = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
chrono = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
humantime-serde = "1.1"
lru = { workspace = true }
parking_lot = { workspace = true }
scopeguard = "1"
regex = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
  "json",
  "rustls",
  "form",
  "stream",
] }
futures = { workspace = true }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }

[dev-dependencies]
nebula-metrics = { path = "../metrics" }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# `token_refresh` tests use a loopback `TcpListener` to mock the token endpoint;
# `execute_stateful_aborts_handler_on_cancel` needs `test-util` for `start_paused`.
tokio = { workspace = true, features = ["io-util", "net", "rt", "macros", "time", "test-util"] }
tokio-util = { workspace = true }
criterion = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
tracing-test = { workspace = true }
wiremock = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true
