[package]
name = "nebula-engine"
version.workspace = true
edition.workspace = true
publish = false
rust-version.workspace = true
authors.workspace = true
description = "Workflow execution engine for Nebula"
license.workspace = true
repository.workspace = true

[features]
default = []
rotation = ["nebula-credential/rotation", "nebula-storage/rotation", "nebula-resource/rotation"]
# Run the full 10-min refresh-coordinator chaos test (sub-spec §5.4) in
# `crates/engine/tests/refresh_coordinator_chaos.rs`. Default CI runs the
# scaled-down 30s version; this feature is enabled in the nightly chaos
# CI job to widen the test plane to 100 credentials × 10 minutes.
chaos-full = []
# Exposes `RefreshCoordMetrics::for_tests()` and other test-only helpers
# that need to construct private MetricsRegistry instances without
# routing through the engine-shared registry. Must NOT be enabled in a
# production release build — see ADR-0023.
test-util = []

[dependencies]
nebula-core = { path = "../core" }
nebula-error = { workspace = true, features = ["derive"] }
nebula-action = { path = "../action" }
nebula-expression = { path = "../expression" }
nebula-plugin = { path = "../plugin" }
nebula-workflow = { path = "../workflow" }
nebula-execution = { path = "../execution" }
nebula-schema = { path = "../schema" }
nebula-credential = { path = "../credential" }
nebula-eventbus = { path = "../eventbus" }
nebula-resource = { path = "../resource" }
nebula-resilience = { path = "../resilience" }
nebula-storage-port = { path = "../storage-port" }
nebula-storage = { path = "../storage", features = ["credential-in-memory"] }
nebula-metrics = { path = "../metrics" }
nebula-orchestrator = { path = "../orchestrator" }

opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }

async-channel = { workspace = true }
async-trait = { workspace = true }
semver = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
chrono = { workspace = true }
rand = { workspace = true }
# W-S3c: token minting — SHA-256 hash + base64 bearer + zeroizing plaintext.
sha2 = { workspace = true }
base64 = { workspace = true }
secrecy = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
ulid = { workspace = true }
humantime-serde = "1.1"
lru = { workspace = true }
parking_lot = { workspace = true }
scopeguard = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }

[dev-dependencies]
# Dev-only: the credential moat tests build a real durable store backed by a
# unique in-memory SQLite database (`SqliteCredentialStore::connect_memory`),
# so the resolver exercises the same CAS path as production. `sqlite` is enough;
# the nebula test-util feature was removed from nebula-storage (ADR-0092 step 8).
nebula-storage = { path = "../storage", features = ["sqlite"] }
# Used by the W-S2b ack-gating tests' fault-injecting `ExecutionStore` wrapper.
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# `token_refresh` tests use a loopback `TcpListener` to mock the token endpoint;
# `execute_stateful_aborts_handler_on_cancel` needs `test-util` for `start_paused`.
tokio = { workspace = true, features = ["io-util", "net", "rt", "macros", "time", "test-util"] }
tokio-util = { workspace = true }
criterion = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["trace"] }
tracing-subscriber = { workspace = true, default-features = false, features = ["registry", "std"] }

[lib]
doctest = false

[lints]
workspace = true
