# budget-justified: foundational new cross-cutting nebula-env crate; intentional multi-file scaffold (reader/error/testing) that cannot fold into an existing module.
[package]
name = "nebula-env"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Typed, cross-cutting environment-variable reader for the Nebula workflow engine"
keywords.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
thiserror = { workspace = true }

[features]
default = []
# Test-only helpers (`EnvGuard`) that mutate process env behind a global lock.
# Enabled automatically for this crate's own `#[cfg(test)]` build.
testing = []

[lints]
workspace = true
