[package]
name = "nebula-error-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Proc-macros for nebula-error classification"
keywords.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
