[package]
name = "nebula-eventbus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Generic event distribution layer: broadcast EventBus with backpressure policy"
keywords.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
pretty_assertions = { workspace = true }
criterion = { workspace = true, features = ["async_tokio", "html_reports"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "ansi"] }

[[bench]]
name = "emit"
harness = false

[[bench]]
name = "throughput"
harness = false
