[package]
name = "nebula-execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
authors.workspace = true
description = "Execution state, journals, idempotency, and planning for the Nebula workflow engine"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
nebula-core = { path = "../core" }
nebula-workflow = { path = "../workflow" }
nebula-action = { path = "../action" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio-util = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
pretty_assertions = { workspace = true }
