[package]
name = "nebula-execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
authors.workspace = true
description = "Execution state, journals, idempotency, and planning for the Nebula workflow engine"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
nebula-core = { path = "../core" }
nebula-error = { workspace = true, features = ["derive"] }
nebula-workflow = { path = "../workflow" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
insta = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
