[package]
name = "nebula-expression"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Powerful expression language for Nebula workflow automation, compatible with n8n syntax"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["expression", "template", "workflow", "n8n", "automation"]
categories = ["template-engine", "parser-implementations"]

[dependencies]
# Nebula internal crates
nebula-core = { path = "../core" }
nebula-log = { path = "../log" }
nebula-memory = { path = "../memory", default-features = true, features = ["cache"] }

# Error handling
thiserror = { workspace = true }

# External dependencies
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"], optional = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "baseline"
harness = false

[features]
default = ["cache", "regex", "datetime", "uuid"]
cache = ["nebula-memory/cache"]
regex = ["dep:regex"]
datetime = []
uuid = ["dep:uuid"]
# Full feature set
full = ["cache", "regex", "datetime", "uuid"]
