[package]
name = "nebula-expression"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Powerful expression language for Nebula workflow automation, compatible with n8n syntax"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["expression", "template", "workflow", "n8n", "automation"]
categories = ["template-engine", "parser-implementations"]

[dependencies]
nebula-log = { path = "../log" }
moka = { workspace = true, features = ["sync"], optional = true }
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
nebula-error = { workspace = true, features = ["derive"] }

# External dependencies
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"], optional = true }
chrono = { workspace = true }
chrono-tz = { workspace = true, optional = true }
parking_lot = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "baseline"
harness = false

[features]
default = ["cache", "regex", "datetime", "uuid"]
cache = ["dep:moka"]
# `regex` brings in `moka` so the regex cache always has true LRU eviction
# (closes ROADMAP #590). Disabling `cache` only turns off the AST cache.
regex = ["dep:regex", "dep:moka"]
# `datetime` brings in `chrono-tz` so date/time builtins accept optional
# IANA timezone arguments (e.g. `format_date(ts, "YYYY-MM-DD HH:mm", "Europe/Moscow")`).
datetime = ["dep:chrono-tz"]
uuid = ["dep:uuid"]
# Full feature set
full = ["cache", "regex", "datetime", "uuid"]

[lints]
workspace = true
