[package]
name = "nebula-log"
version.workspace = true
edition.workspace = true
keywords.workspace = true
authors.workspace = true
description = "Fast and beautiful logging library"
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies

# Async runtime (optional)
tokio = { workspace = true, features = ["time", "sync", "rt"], optional = true }

# Core tracing
tracing = { workspace = true }
tracing-appender = { version = "0.2.4", optional = true }
tracing-log = { version = "0.2", optional = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "fmt",
    "json",
    "ansi",
    "registry",
    "std",
    "time",
    "tracing-log",
], default-features = false }


#Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Telemetry (optional)
flate2 = { version = "1.1.9", optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
sentry = { version = "0.46.2", optional = true }
sentry-tracing = { version = "0.46.2", optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

# Time
time = { version = "0.3", features = ["macros", "formatting"] }

# Utilities
pin-project = "1.1"
arc-swap = { workspace = true }
parking_lot = { workspace = true }

# Metrics (optional)
metrics = { workspace = true, optional = true }

[features]
default = ["ansi", "async"]
ansi = []
async = ["tokio"]
file = ["tracing-appender", "flate2"]
log-compat = ["tracing-log"]
observability = ["metrics"]
telemetry = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry", "observability"]
sentry = ["dep:sentry", "sentry-tracing"]
full = ["ansi", "async", "file", "log-compat", "telemetry", "sentry", "observability"]

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
serde_yaml = "0.9"
uuid = { workspace = true }
# Temporarily disabled due to aws-lc-sys requiring cmake/NASM on Windows
# metrics-exporter-prometheus = "0.15"

[[example]]
name = "sentry_test"
path = "examples/sentry_test.rs"
required-features = ["sentry"]

[[bench]]
name = "log_hot_path"
harness = false
