[package]
name = "nebula-log"
version.workspace = true
edition.workspace = true
keywords.workspace = true
authors.workspace = true
description = "Fast and beautiful logging library"
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies

# Async runtime (optional)
tokio = { workspace = true, features = ["time", "sync", "rt", "fs", "io-util"], optional = true }

# Core tracing
tracing = { workspace = true }
tracing-appender = { version = "0.2.4", optional = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "fmt",
  "json",
  "ansi",
  "registry",
  "std",
  "time",
  "tracing-log",
], default-features = false }


# Error handling
nebula-error = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Telemetry (optional)
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
# rustls-only TLS path: sentry's default `transport` feature pulls native-tls
# (= openssl 0.10.x), banned workspace-wide in deny.toml. We re-enable the
# rest of sentry's default set explicitly and replace `transport` with
# `reqwest` + `rustls`.
sentry = { version = "0.48", optional = true, default-features = false, features = [
  "backtrace",
  "contexts",
  "debug-images",
  "panic",
  "release-health",
  "reqwest",
  "rustls",
] }
sentry-tracing = { version = "0.48", optional = true, default-features = false }
tracing-opentelemetry = { workspace = true, optional = true }

# Time
time = { version = "0.3", features = ["macros", "formatting"] }

# Utilities
pin-project = "1.1"
arc-swap = { workspace = true }
parking_lot = { workspace = true }
smallvec = { workspace = true }

[features]
default = ["ansi", "async"]
ansi = []
async = ["tokio"]
file = ["tracing-appender"]
# The `log`-crate bridge is provided by tracing-subscriber's always-on
# `tracing-log` feature (see [dependencies]); this feature is kept as a
# no-op for config compatibility.
log-compat = []
telemetry = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]
sentry = ["dep:sentry", "sentry-tracing"]
full = ["ansi", "async", "file", "log-compat", "telemetry", "sentry"]

[dev-dependencies]
anyhow = { workspace = true }
nebula-env = { workspace = true, features = ["testing"] }
criterion = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
uuid = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }

[[example]]
name = "sentry_test"
path = "examples/sentry_test.rs"
required-features = ["sentry"]

[[example]]
name = "otlp_setup"
path = "examples/otlp_setup.rs"
required-features = ["telemetry"]

[[example]]
name = "sentry_setup"
path = "examples/sentry_setup.rs"
required-features = ["sentry"]

[[example]]
name = "async_timing"
path = "examples/async_timing.rs"
required-features = ["async"]

[[example]]
name = "context_propagation"
path = "examples/context_propagation.rs"
required-features = ["async"]

[[bench]]
name = "log_hot_path"
harness = false

[package.metadata.cargo-shear]
# Optional deps pulled in via feature-gated code paths that cargo-shear
# doesn't always trace:
#   - flate2: used when the `file` feature enables gzipped log rotation
#     through tracing-appender (enabled via feature, exercised in the
#     file-rotation integration, not a direct `use` in src/).
#   - tracing-log: activated through tracing-subscriber's `tracing-log`
#     feature; the `log-compat` feature re-exposes it for downstream.
ignored = ["flate2", "tracing-log"]

[package.metadata.docs.rs]
# Render feature-gated items on docs.rs (build with every feature).
all-features = true

[lints]
workspace = true
